compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__provide_arg_type_to_fn_arg_infer_error.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n   fn(x) { x.2 }(z)\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:12
  │
3 │    fn(x) { x.2 }(z)
  │            ^ What type is this?

To index into a tuple we need to know it size, but we don't know
anything about this type yet. Please add some type annotations so
we can continue.

error: Unknown variable
  ┌─ /src/one/two.gleam:3:18
  │
3 │    fn(x) { x.2 }(z)
  │                  ^

The name `z` is not in scope here.
